<resources>

    <string name="app_name">AddressBookAirWatchTest</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">PhoneBook</string>
    <string name="add">Add</string>
    <string name="edit">Edit..</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="userdetailsOK">OK</string>
    <string name="grouplabel">Group</string>

    <string-array name="group_array">
        <item>Friends</item>
        <item>Family</item>
        <item>Office</item>
        <item>Acquaintance</item>
    </string-array>

</resources>