
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <EditText
            android:id="@+id/nametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/namelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nametext"
            android:layout_alignBottom="@+id/nametext"
            android:layout_alignParentLeft="true"
            android:text="@string/name" />

        <TextView
            android:id="@+id/numberlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nametext"
            android:layout_marginTop="36dp"
            android:text="@string/number" />

        <EditText
            android:id="@+id/numbertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberlabel"
            android:layout_alignBottom="@+id/numberlabel"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/userdetailsOK" />

        <Spinner
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonOK"
            android:layout_alignLeft="@+id/numbertext"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/group"
            android:layout_alignBottom="@+id/group"
            android:layout_alignParentLeft="true"
            android:text="@string/grouplabel" />

    </RelativeLayout>
